native/bridge/include/jpdfium.h

JPDFIUM_EXPORT int32_t jpdfium_init(void);
JPDFIUM_EXPORT void jpdfium_destroy(void);
// Raw handle extraction - allows direct FFM calls to PDFium functions.
// These return the raw FPDF_DOCUMENT / FPDF_PAGE pointers as int64_t values.
JPDFIUM_EXPORT int64_t jpdfium_doc_raw_handle(int64_t doc);
JPDFIUM_EXPORT int64_t jpdfium_page_raw_handle(int64_t page);
JPDFIUM_EXPORT int64_t jpdfium_page_doc_raw_handle(int64_t page);
// Create a new, empty document. Caller owns the returned handle
// (jpdfium_doc_close). Unlike merging into a document opened from an
// existing file, page imports into a freshly created document are the
// only reliable base (PDFium's page exporter leaves stale object
// references behind when importing into a document that already has
// content, which can crash the save path).
JPDFIUM_EXPORT int32_t jpdfium_doc_create(int64_t* handle);
JPDFIUM_EXPORT int32_t jpdfium_doc_open(const char* path, int64_t* handle);