jpdfium/src/main/java/stirling/software/jpdfium/panama/JpdfiumH.java

// Generated by jextract

package stirling.software.jpdfium.panama;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class JpdfiumH extends JpdfiumH$shared {

    JpdfiumH() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());


    private static class jpdfium_init {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_init");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_init()
     * }
     */
    public static FunctionDescriptor jpdfium_init$descriptor() {
        return jpdfium_init.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_init()
     * }
     */
    public static MethodHandle jpdfium_init$handle() {
        return jpdfium_init.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_init()
     * }
     */
    public static MemorySegment jpdfium_init$address() {
        return jpdfium_init.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_init()
     * }
     */
    public static int jpdfium_init() {
        var mh$ = jpdfium_init.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_init");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_destroy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void jpdfium_destroy()
     * }
     */
    public static FunctionDescriptor jpdfium_destroy$descriptor() {
        return jpdfium_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void jpdfium_destroy()
     * }
     */
    public static MethodHandle jpdfium_destroy$handle() {
        return jpdfium_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void jpdfium_destroy()
     * }
     */
    public static MemorySegment jpdfium_destroy$address() {
        return jpdfium_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void jpdfium_destroy()
     * }
     */
    public static void jpdfium_destroy() {
        var mh$ = jpdfium_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_destroy");
            }
            mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_doc_raw_handle {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_LONG,
            JpdfiumH.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_doc_raw_handle");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int64_t jpdfium_doc_raw_handle(int64_t doc)
     * }
     */
    public static FunctionDescriptor jpdfium_doc_raw_handle$descriptor() {
        return jpdfium_doc_raw_handle.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int64_t jpdfium_doc_raw_handle(int64_t doc)
     * }
     */
    public static MethodHandle jpdfium_doc_raw_handle$handle() {
        return jpdfium_doc_raw_handle.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int64_t jpdfium_doc_raw_handle(int64_t doc)
     * }
     */
    public static MemorySegment jpdfium_doc_raw_handle$address() {
        return jpdfium_doc_raw_handle.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int64_t jpdfium_doc_raw_handle(int64_t doc)
     * }
     */
    public static long jpdfium_doc_raw_handle(long doc) {
        var mh$ = jpdfium_doc_raw_handle.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_doc_raw_handle", doc);
            }
            return (long)mh$.invokeExact(doc);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_page_raw_handle {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_LONG,
            JpdfiumH.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_page_raw_handle");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int64_t jpdfium_page_raw_handle(int64_t page)
     * }
     */
    public static FunctionDescriptor jpdfium_page_raw_handle$descriptor() {
        return jpdfium_page_raw_handle.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int64_t jpdfium_page_raw_handle(int64_t page)
     * }
     */
    public static MethodHandle jpdfium_page_raw_handle$handle() {
        return jpdfium_page_raw_handle.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int64_t jpdfium_page_raw_handle(int64_t page)
     * }
     */
    public static MemorySegment jpdfium_page_raw_handle$address() {
        return jpdfium_page_raw_handle.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int64_t jpdfium_page_raw_handle(int64_t page)
     * }
     */
    public static long jpdfium_page_raw_handle(long page) {
        var mh$ = jpdfium_page_raw_handle.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_page_raw_handle", page);
            }
            return (long)mh$.invokeExact(page);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_page_doc_raw_handle {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_LONG,
            JpdfiumH.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_page_doc_raw_handle");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int64_t jpdfium_page_doc_raw_handle(int64_t page)
     * }
     */
    public static FunctionDescriptor jpdfium_page_doc_raw_handle$descriptor() {
        return jpdfium_page_doc_raw_handle.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int64_t jpdfium_page_doc_raw_handle(int64_t page)
     * }
     */
    public static MethodHandle jpdfium_page_doc_raw_handle$handle() {
        return jpdfium_page_doc_raw_handle.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int64_t jpdfium_page_doc_raw_handle(int64_t page)
     * }
     */
    public static MemorySegment jpdfium_page_doc_raw_handle$address() {
        return jpdfium_page_doc_raw_handle.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int64_t jpdfium_page_doc_raw_handle(int64_t page)
     * }
     */
    public static long jpdfium_page_doc_raw_handle(long page) {
        var mh$ = jpdfium_page_doc_raw_handle.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_page_doc_raw_handle", page);
            }
            return (long)mh$.invokeExact(page);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_doc_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_doc_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_create(int64_t *handle)
     * }
     */
    public static FunctionDescriptor jpdfium_doc_create$descriptor() {
        return jpdfium_doc_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_create(int64_t *handle)
     * }
     */
    public static MethodHandle jpdfium_doc_create$handle() {
        return jpdfium_doc_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_create(int64_t *handle)
     * }
     */
    public static MemorySegment jpdfium_doc_create$address() {
        return jpdfium_doc_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_doc_create(int64_t *handle)
     * }
     */
    public static int jpdfium_doc_create(MemorySegment handle) {
        var mh$ = jpdfium_doc_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_doc_create", handle);
            }
            return (int)mh$.invokeExact(handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_doc_open {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_doc_open");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_open(const char *path, int64_t *handle)
     * }
     */
    public static FunctionDescriptor jpdfium_doc_open$descriptor() {
        return jpdfium_doc_open.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_open(const char *path, int64_t *handle)
     * }
     */
    public static MethodHandle jpdfium_doc_open$handle() {
        return jpdfium_doc_open.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_open(const char *path, int64_t *handle)
     * }
     */
    public static MemorySegment jpdfium_doc_open$address() {
        return jpdfium_doc_open.ADDR;
    }
